--- a/android/app/src/main/res/layout/tracksactvity_item.xml
+++ b/android/app/src/main/res/layout/tracksactvity_item.xml
@@ -96,6 +96,30 @@
                             android:layout_marginStart="@dimen/layout_margin_large"/>
                     </LinearLayout>
 
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/layout_margin_medium"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:contentDescription="@string/session_speaker_icon"
+                            android:id="@+id/icon_speaker"
+                            app:srcCompat="@drawable/ic_speaker_black_24dp"/>
+                        <TextView
+                            android:id="@+id/session_spaeker"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size"
+                            android:text="Speaker"
+                            android:textColor="@color/primary_text"
+                            android:layout_marginLeft="@dimen/layout_margin_large"
+                            android:layout_marginStart="@dimen/layout_margin_large"/>
+                    </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -147,6 +171,7 @@
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
+                            android:id="@+id/icon_location"
                             android:contentDescription="@string/session_location_icon"
                             app:srcCompat="@drawable/ic_location_on_black_24dp"/>
                         <TextView
