fix: Font size of text on Speaker's image (#1197)

--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -34,6 +34,7 @@
     <dimen name="layout_margin_large">16dp</dimen>
 
     <!-- padding specifics -->
+    <dimen name="padding_extra_small">2dp</dimen>
     <dimen name="padding_small">4dp</dimen>
     <dimen name="padding_medium">8dp</dimen>
     <dimen name="padding_large">16dp</dimen>
