--- a/android/app/src/main/res/layout/recycler_view_header.xml
+++ b/android/app/src/main/res/layout/recycler_view_header.xml
@@ -8,18 +8,18 @@
         android:id="@+id/recyclerview_view_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f7f1f1"
+        android:background="#f5f5f5"
         android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
+        android:paddingBottom="@dimen/padding_medium"
+        android:paddingLeft="@dimen/padding_medium"
+        android:paddingRight="@dimen/padding_medium"
         android:paddingTop="12dp"
         android:textColor="@android:color/black"
-        android:textSize="12sp" />
+        android:textSize="@dimen/text_size_medium" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#e1dfe1" />
+        android:background="#e1e1e1" />
 
 </LinearLayout>
