--- a/android/app/src/main/res/xml/settings.xml
+++ b/android/app/src/main/res/xml/settings.xml
@@ -5,7 +5,7 @@
 
 
     <SwitchPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:key="@string/download_mode_key"
         android:summary="@string/summary_mode_download"
         android:title="@string/settings_mode_download" />
